# jetson-fan-table

./: .clang-format  .gitignore  .gitmodules  Makefile.am  autogen.sh  configure.ac  license  readme.md  uninstall.sh
.github/workflows/: distcheck.yml  release.yml
data/: config  fantable.service.in  table
debian/: changelog  control  fantable.install  postrm  rules
include/: atexit.h  clocks.h  defines.h  interpolate.h  jetson_clocks.h  load_config.h  log.h  parse_table.h  pid.h  status.h  store_restore.h  test.defines.h  thermal.h  utils.h
src/: main.cpp
test/: flags.txt  jetson-clocks-error.sh  jetson-clocks.sh  l4t_dfs.conf  make_test_fs.sh  table  table.csv
test/thermal_zone0/: type
test/thermal_zone1/: type
test/thermal_zone2/: type
test/thermal_zone3/: type
